--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html>
- 
+
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet"> 
-
 
 </head>
 
@@ -19,7 +18,7 @@
       <h1 style="font-size: 6vw;">Seven Wonders Of The World</h1>
 
     </header>
-    <nav >
+    <nav>
       <ul class="navigation">
         <li><a href="#home">Home</a></li>
         <li><a href="#news">News</a></li>
@@ -29,8 +28,8 @@
     </nav>
 
   </div>
-  <div  >
-      <img src="/img/img8.jpeg" alt="img7" class="pic">
+  <div>
+    <img src="/img/img8.jpeg" alt="img7" class="pic">
   </div>
 
   <div class="flex-container">
@@ -44,18 +43,17 @@
       <img src="/img/img1.jpeg" alt="img1" style="width: 100%; height:100%;">
     </div>
     <div class="child-container">
-        <h2>Christ the Redeemer Statue</h2>
+      <h2>Christ the Redeemer Statue</h2>
       <p>
         The Art Deco-style Christ the Redeemer statue has been looming over the Brazilians from upon Corcovado mountain in an awe-inspiring
         state of eternal blessing since 1931. The 130-foot reinforced concrete-and-soapstone statue was designed by Heitor
         da Silva Costa and cost approximately $250,000 to build - much of the money was raised through donations. The statue
-        has become an easily recognized icon for Rio and Brazil.
-        Banglorer
+        has become an easily recognized icon for Rio and Brazil. Banglorer
       </p>
       <img src="/img/img2.jpeg" alt="img1" style="width: 100%; height:100%;">
     </div>
     <div class="child-container">
-        <h2>Machu Picchu </h2>
+      <h2>Machu Picchu </h2>
       <p>
         Machu Picchu, an Incan city of sparkling granite precariously perched between 2 towering Andean peaks, is thought by scholars
         to have been a sacred archaeological center for the nearby Incan capital of Cusco. Built at the peak of the Incan
@@ -65,9 +63,9 @@
       </p>
       <img src="/img/img3.jpeg" alt="img1" style="width: 100%; height:100%;">
     </div>
-    
+
     <div class="child-container">
-        <h2>Chichen Itza</h2>
+      <h2>Chichen Itza</h2>
       <p>
         The genius and adaptability of Mayan culture can be seen in the splendid ruins of Chichen Itza. This powerful city, a trading
         center for cloth, slaves, honey and salt, flourished from approximately 800 to 1200, and acted as the political and
@@ -77,20 +75,27 @@
       <img src="/img/img4.jpeg" alt="img1" style="width: 100%; height:100%;">
     </div>
     <div class="child-container">
-        <h2>The Roman Colosseum </h2>
+      <h2>The Roman Colosseum </h2>
       <p>
-        Rome's, if not Italy's, most enduring icon is undoubtedly its Colosseum. Built between A.D. 70 and 80 A.D., it was in use for some 500 years. The elliptical structure sat nearly 50,000 spectators, who gathered to watch the gladiatorial events as well as other public spectacles, including battle reenactments, animal hunts and executions. Earthquakes and stone-robbers have left the Colosseum in a state of ruin, but portions of the structure remain open to tourists, and its design still influences the construction of modern-day amphitheaters, some 2,000 years later.
+        Rome's, if not Italy's, most enduring icon is undoubtedly its Colosseum. Built between A.D. 70 and 80 A.D., it was in use
+        for some 500 years. The elliptical structure sat nearly 50,000 spectators, who gathered to watch the gladiatorial
+        events as well as other public spectacles, including battle reenactments, animal hunts and executions. Earthquakes
+        and stone-robbers have left the Colosseum in a state of ruin, but portions of the structure remain open to tourists,
+        and its design still influences the construction of modern-day amphitheaters, some 2,000 years later.
       </p>
       <img src="/img/img5.jpeg" alt="img1" style="width: 100%; height:100%;">
     </div>
     <div class="child-container">
-        <h2>Taj Mahal</h2>
+      <h2>Taj Mahal</h2>
       <p>
-        A mausoleum commissioned for the wife of Mughal Emperor Shah Jahan, the Taj Mahal was built between 1632 and 1648. Considered the most perfect specimen of Muslim art in India, the white marble structure actually represents a number of architectural styles, including Persian, Islamic, Turkish and Indian. The Taj Mahal also encompasses formal gardens of raised pathways, sunken flower beds and a linear reflecting pool.
+        A mausoleum commissioned for the wife of Mughal Emperor Shah Jahan, the Taj Mahal was built between 1632 and 1648. Considered
+        the most perfect specimen of Muslim art in India, the white marble structure actually represents a number of architectural
+        styles, including Persian, Islamic, Turkish and Indian. The Taj Mahal also encompasses formal gardens of raised pathways,
+        sunken flower beds and a linear reflecting pool.
       </p>
       <img src="/img/img6.jpeg" alt="img1" style="width: 100%; height:100%;">
     </div>
-   
+
 
 
   </div>
