--- a/index.html
+++ b/index.html
@@ -3,19 +3,33 @@
 
 
 <head>
+  <title>My First Responsive Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <link rel="icon" href="img/images.jpeg" type="image/jpeg" sizes="16x16">
 
 </head>
 
 <body>
 
 
-  <div class="ext" style="display: flex;flex-flow: column wrap;">
+  <div class="ext">
 
     <header class="head">
-      <h1 style="font-size: 6vw;">Seven Wonders Of The World</h1>
+      <h1>Seven Wonders Of The World</h1>
 
     </header>
     <nav>
@@ -40,7 +54,7 @@
         to protect the borders of the Chinese Empire from invading Mongols. The Great Wall is actually a succession of multiple
         walls spanning approximately 4,000 miles, making it the world's longest manmade structure.
       </p>
-      <img src="/img/img1.jpeg" alt="img1" style="width: 100%; height:100%;">
+      <img src="/img/img1.jpeg" alt="img1">
     </div>
     <div class="child-container">
       <h2>Christ the Redeemer Statue</h2>
@@ -50,7 +64,7 @@
         da Silva Costa and cost approximately $250,000 to build - much of the money was raised through donations. The statue
         has become an easily recognized icon for Rio and Brazil. Banglorer
       </p>
-      <img src="/img/img2.jpeg" alt="img1" style="width: 100%; height:100%;">
+      <img src="/img/img2.jpeg" alt="img1">
     </div>
     <div class="child-container">
       <h2>Machu Picchu </h2>
@@ -61,7 +75,7 @@
         to locals until 1911, when it was rediscovered by archaeologist Hiram Bingham. The site can only be reached by foot,
         train or helicopter; most visitors visit by train from nearby Cusco.
       </p>
-      <img src="/img/img3.jpeg" alt="img1" style="width: 100%; height:100%;">
+      <img src="/img/img3.jpeg" alt="img1">
     </div>
 
     <div class="child-container">
@@ -72,7 +86,7 @@
         economic hub of the Mayan civilization. The most familiar ruin at the site is El Caracol, a sophisticated astronomical
         observatory.
       </p>
-      <img src="/img/img4.jpeg" alt="img1" style="width: 100%; height:100%;">
+      <img src="/img/img4.jpeg" alt="img1">
     </div>
     <div class="child-container">
       <h2>The Roman Colosseum </h2>
@@ -83,7 +97,7 @@
         and stone-robbers have left the Colosseum in a state of ruin, but portions of the structure remain open to tourists,
         and its design still influences the construction of modern-day amphitheaters, some 2,000 years later.
       </p>
-      <img src="/img/img5.jpeg" alt="img1" style="width: 100%; height:100%;">
+      <img src="/img/img5.jpeg" alt="img1">
     </div>
     <div class="child-container">
       <h2>Taj Mahal</h2>
@@ -93,7 +107,7 @@
         styles, including Persian, Islamic, Turkish and Indian. The Taj Mahal also encompasses formal gardens of raised pathways,
         sunken flower beds and a linear reflecting pool.
       </p>
-      <img src="/img/img6.jpeg" alt="img1" style="width: 100%; height:100%;">
+      <img src="/img/img6.jpeg" alt="img1">
     </div>
 
 
@@ -102,6 +116,11 @@
   <footer>
     <p>Posted by: Simran Kaur</p>
     <p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+    <p>Follow us on:&nbsp<a href="#"> <i class="fab fa-facebook fa-2x"></i></a>&nbsp&nbsp <a href="#"> <i class="fab fa-twitter fa-2x"></i></a>&nbsp&nbsp
+      <a href="#"> <i class="fab fa-google-plus fa-2x"></i></a>&nbsp&nbsp<a href="#"><i class="fab fa-linkedin fa-2x"></i></a>&nbsp&nbsp<a
+        href="#"><i class="fab fa-snapchat fa-2x"></i></a>&nbsp&nbsp<a href="#"><i class="fab fa-skype fa-2x"></i></a></p>
+
+
   </footer>
 
 
